--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,9 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:27.1.1"
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    implementation "com.squareup.retrofit2:retrofit:2.3.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava:2.3.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.3.0"
 }
