--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
 
     implementation "io.reactivex:rxandroid:1.2.1"
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
