--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,10 @@ android {
     dataBinding {
         enabled = true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
@@ -49,4 +53,7 @@ dependencies {
     testImplementation "org.powermock:powermock-module-junit4-rule:1.6.2"
     testImplementation "org.powermock:powermock-api-mockito:1.6.2"
     testImplementation "org.powermock:powermock-classloading-xstream:1.6.2"
+
+    testImplementation "org.robolectric:robolectric:3.3.2"
+    testImplementation "android.arch.core:core-testing:1.1.1"
 }
